treactor1/gateway_treactor.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata: # kpt-merge: default/gateway
  name: gateway
  namespace: default
  annotations:
    internal.kpt.dev/upstream-identifier: 'gateway.networking.k8s.io|Gateway|default|gateway'
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: "treactor.example.com"
    name: default
    port: 80
    protocol: HTTP
